--- a/work.html
+++ b/work.html
@@ -24,7 +24,7 @@
           <div class="grid-third">
             <nav>
               <a href="index.html" class="animsition-link">Home</a>
-              <a href="#" class="active animsition-link">Work</a>
+              <a href="work.html" class="active animsition-link">Work</a>
               <a href="team.html" class="animsition-link">Team</a>
             </nav>
           </div>
@@ -71,7 +71,7 @@
         <footer>
           <div class="row">
             <div class="grid-full">
-              <p>Connect with us</p>
+              <p>A Custom Template by steve5079.</p>
               <ul class="social">
                 <li>
                   <a href="#" class="pink"></a>
@@ -84,7 +84,7 @@
         </footer><!--/footer-->
         </div>
     </body>
-    <script src="js/jquery-1.11.2.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="js/animsition/jquery.animsition.min.js"></script>
     <script src="js/sticky/jquery.sticky.js"></script>
     <script src="js/main.js"></script>
