--- a/team.html
+++ b/team.html
@@ -10,6 +10,8 @@
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="js/animsition/animsition.min.css">
+        <link rel="stylesheet" href="js/slick/slick.css">
+        <link rel="stylesheet" href="js/slick/slick-theme.css">
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
@@ -29,68 +31,72 @@
             </nav>
           </div>
       </header><!--/header-->
+
         <div class="main row">
         <div class="grid-full">
           <div class="team">
             <h2>Meet the team</h2>
             <h4>United we stand divided we fail</h4>
           </div>
-          <div class="grid-fifth">
+              <!-- slides go here-->
+        <div class="slides">
+
+          <div>
             <img src="img/team-members/team--01.png" alt="" class="avatar" />
             <h3>Bill Bigsby IV</h3>
             <p>CEO</p>
           </div><!--/1-->
-          <div class="grid-fifth">
+          <div>
             <img src="img/team-members/team--02.png" alt="" class="avatar"  />
             <h3>Jane Jewels</h3>
             <p>CFO</p>
           </div><!--/2-->
-          <div class="grid-fifth">
+          <div>
             <img src="img/team-members/team--03.png" alt="" class="avatar"  />
             <h3>Doughy Digital</h3>
             <p>Lead Developer</p>
           </div><!--/3-->
-          <div class="grid-fifth">
+          <div>
             <img src="img/team-members/team--04.png" alt="" class="avatar"  />
             <h3>Ralph Raider</h3>
             <p>Lead Designer</p>
           </div><!--/4-->
-          <div class="grid-fifth">
+          <div>
             <img src="img/team-members/team--05.png" alt="" class="avatar"  />
             <h3>Nolan Nitro</h3>
             <p>Senior Developer</p>
           </div><!--/5-->
-          <div class="grid-fifth">
+          <div>
             <img src="img/team-members/team--06.png" alt="" class="avatar"  />
             <h3>Donna Danger</h3>
             <p>Senior Developer</p>
           </div><!--/6-->
-          <div class="grid-fifth">
+          <div>
             <img src="img/team-members/team--07.png" alt="" class="avatar"  />
             <h3>Rebecca Roo</h3>
             <p>Senior Designer</p>
           </div><!--/7-->
-          <div class="grid-fifth">
+          <div>
             <img src="img/team-members/team--08.png" alt="" class="avatar"  />
             <h3>Lenny Lowes</h3>
             <p>Senior Designer</p>
           </div><!--/8-->
-          <div class="grid-fifth">
+          <div>
             <img src="img/team-members/team--09.png" alt="" class="avatar"  />
             <h3>Eli Elfs</h3>
             <p>Designer</p>
           </div><!--/9-->
-          <div class="grid-fifth">
+          <div>
             <img src="img/team-members/team--10.png" alt="" class="avatar"  />
             <h3>Trevor Tuesday</h3>
             <p>Junior Developer</p>
           </div><!--/10-->
-          <div class="grid-fifth">
+          <div>
             <img src="img/team-members/team--11.png" alt="" class="avatar"  />
             <h3>Tori Traffic</h3>
             <p>Project Mangagement</p>
           </div><!--/11-->
-          <div class="grid-fifth">
+          <div>
             <img src="img/team-members/team--12.png" alt="" class="avatar"  />
             <h3>Fido Fur</h3>
             <p>Office Manager</p>
@@ -100,7 +106,7 @@
         <footer>
           <div class="row">
             <div class="grid-full">
-              <p>Connect with us</p>
+              <p>A Custom Template by steve5079.</p>
               <ul class="social">
                 <li>
                   <a href="#" class="pink"></a>
@@ -112,9 +118,18 @@
           </div>
         </footer><!--/footer-->
         </div>
-        <script src="js/jquery-1.11.2.min.js"></script>
+        </div>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
         <script src="js/animsition/jquery.animsition.min.js"></script>
         <script src="js/sticky/jquery.sticky.js"></script>
+        <script src="js/slick/slick.min.js"></script>
         <script src="js/main.js"></script>
+        <script>
+  $('.slides').slick({
+    dots:true,
+    slidesToShow: 4,
+    slidesToScroll:4
+  });
+      </script>
     </body>
 </html>
