--- a/work.html
+++ b/work.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Agency - A Treehouse template</title>
+        <title>Agency Template</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!--CSS-->
@@ -61,7 +61,7 @@
           </div>
           <div class="grid-half item">
             <div class="frame yellow">
-              <img src="img/slide-Kitt.png" alt="" />
+              <img src="img/slide-kitt.png" alt="" />
             </div>
             <h3>KITT</h3>
             <p>Turn your car into KITT from Knight Rider</p>
