--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                   <div class="grid-half">
                     <h2>DailyFeed</h2>
                     <p>Your number one podcast app</p>
-                    <a href="#" class="button">Check it Out</a>
+                    <a href="#" class="button">Discover More!</a>
                   </div>
                   <div class="grid-half">
                     <img src="img/slide-dailyFeed.png" alt="" />
